# caustics

./: .gitignore  CMakeLists.txt  README.md  main.cpp  raytracer.cpp  raytracer.h  renderer.cpp  renderer.h  utils.h  wave_sim.cpp  wave_sim.h
include/glad/: glad.c  glad.h
